--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.2",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-speech-kit": "^3.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
