--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "react-speech-kit": "^3.0.1",
+    "recoil": "^0.7.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
